add_pico_executable(gpio_interrupt_test_single_core gpio_interrupt_tester.cc)
target_link_libraries(gpio_interrupt_test_single_core pico_stdlib pico_time hardware_irq hardware_gpio FreeRTOS-Kernel FreeRTOS-Kernel-Heap4)
target_include_directories(gpio_interrupt_test_single_core PRIVATE freertos_config_single_core)

add_pico_executable(gpio_interrupt_test_smp_interrupt_core_0 gpio_interrupt_tester.cc)
target_link_libraries(gpio_interrupt_test_smp_interrupt_core_0 pico_stdlib pico_time hardware_irq hardware_gpio FreeRTOS-Kernel FreeRTOS-Kernel-Heap4)
target_include_directories(gpio_interrupt_test_smp_interrupt_core_0 PRIVATE freertos_config_smp)
target_compile_options(gpio_interrupt_test_smp_interrupt_core_0 PRIVATE -DRECEIVER_TASK_AFFINITY=0b01)

add_pico_executable(gpio_interrupt_test_smp_interrupt_core_1 gpio_interrupt_tester.cc)
target_link_libraries(gpio_interrupt_test_smp_interrupt_core_1 pico_stdlib pico_time hardware_irq hardware_gpio FreeRTOS-Kernel FreeRTOS-Kernel-Heap4)
target_include_directories(gpio_interrupt_test_smp_interrupt_core_1 PRIVATE freertos_config_smp)
target_compile_options(gpio_interrupt_test_smp_interrupt_core_1 PRIVATE -DRECEIVER_TASK_AFFINITY=0b10)

add_pico_executable(gpio_interrupt_test_smp_interrupt_either_core gpio_interrupt_tester.cc)
target_link_libraries(gpio_interrupt_test_smp_interrupt_either_core pico_stdlib pico_time hardware_irq hardware_gpio FreeRTOS-Kernel FreeRTOS-Kernel-Heap4)
target_include_directories(gpio_interrupt_test_smp_interrupt_either_core PRIVATE freertos_config_smp)
target_compile_options(gpio_interrupt_test_smp_interrupt_either_core PRIVATE -DRECEIVER_TASK_AFFINITY=0b11)